test/corpus/add_keys_to_agent.txt
==================
add key to agent
==================

AddKeysToAgent yes

---

(client_config
  (add_keys_to_agent
    (add_keys_to_agent_value)))

==================
do not add keys to agent
==================

AddKeysToAgent no

---

(client_config
  (add_keys_to_agent
    (add_keys_to_agent_value)))

==================
use irregular casing
==================

addkeystoAGENT yes

---

(client_config
  (add_keys_to_agent
    (add_keys_to_agent_value)))

==================
can use equals sign
==================

addkeystoAGENT=yes

---

(client_config
  (add_keys_to_agent
    (add_keys_to_agent_value)))

==================
can use equals sign with whitespace
==================

addkeystoAGENT = yes

---

(client_config
  (add_keys_to_agent
    (add_keys_to_agent_value)))

==================
can be specified after host
==================

Host example.com
  AddKeysToAgent no

---

(client_config
  (host
    (host_value))
  (add_keys_to_agent
    (add_keys_to_agent_value)))

==================
detect invalid values
==================

addkeystoAGENT ja

---

(client_config
  (ERROR
    (UNEXPECTED 'j')))
