test/corpus/canonical_domains.txt
==================
canonical domain
==================

CanonicalDomains example

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
canonical domain with tld
==================

CanonicalDomains example.com

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
canonical subdomain with tld
==================

CanonicalDomains sub.example.com

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
use irregular casing
==================

CanonicaldOMAins hoß.de

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
can use equals sign
==================

CanonicaldOMAins=hoß.de

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
can use equals sign with whitespace
==================

CanonicaldOMAins = hoß.de

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
can use equals sign with whitespace and quotes
==================

CanonicaldOMAins = "hoß.de"

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
can use tab character
==================

CanonicaldOMAins	"hoß.de"

---

(client_config
  (canonical_domains
    (canonical_domains_value)))

==================
can be specified after host
==================

Host example.com
  CanonicaldOMAins hoß.de

---

(client_config
  (host
    (host_value))
  (canonical_domains
    (canonical_domains_value)))

==================
requires whitespace after key
==================

CanonicaldOMAiNS"hoß.de"

---

(client_config
  (ERROR
    (UNEXPECTED 223)))
