test/corpus/canonicalize_hostname.txt
==================
perform hostname canonicalization
==================

CanonicalizeHostname yes

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
perform hostname canonicalization w/ bool
==================

CanonicalizeHostname true

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
Perform Hostname Canonicalization
==================

CanonicalizeHostname Yes

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
Perform Hostname Canonicalization w/ Bool
==================

CanonicalizeHostname TrUe

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
do not perform hostname canonicalization
==================

CanonicalizeHostname no

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
Do Not Perform Hostname Canonicalization
==================

CanonicalizeHostname No

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
do not perform hostname canonicalization w/ bool
==================

CanonicalizeHostname false

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
Do Not Perform Hostname Canonicalization w/ Bool
==================

CanonicalizeHostname fAlSe

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
always perform hostname canonicalization
==================

CanonicalizeHostname always

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
Always Perform Hostname Canonicalization
==================

CanonicalizeHostname Always

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
disable ProxyJump host
==================

CanonicalizeHostname none

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
use irregular casing
==================

CanonICalizeHostname yes

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
can use equals sign
==================

CanonicalizeHostname=yes

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
can use equals sign with whitespace
==================

CanonicalizeHostname = yes

---

(client_config
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
can be specified after host
==================

Host example.com
  CanonicalizeHostname no

---

(client_config
  (host
    (host_value))
  (canonicalize_hostname
    (canonicalize_hostname_value)))

==================
detect invalid values
==================

CanonicalizeHostname ja

---

(client_config
  (ERROR
    (UNEXPECTED 'j')))

==================
requires whitespace after key
==================

CanonicalizeHostnaMEyes

---

(client_config
  (ERROR))
