test/corpus/certificate_file.txt
==================
use certificate from user home
==================

CertificateFile ~/.ssh/cert

---

(client_config
  (certificate_file
    (certificate_file_value)))

==================
use certificate from system
==================

CertificateFile /etc/ssh/cert

---

(client_config
  (certificate_file
    (certificate_file_value)))

==================
use irregular casing
==================

CertifICateFile ~/.ssh/cert

---

(client_config
  (certificate_file
    (certificate_file_value)))

==================
can use equals sign
==================

CertificateFile=~/.ssh/cert

---

(client_config
  (certificate_file
    (certificate_file_value)))

==================
can use equals sign with whitespace
==================

CertificateFile = ~/.ssh/cert

---

(client_config
  (certificate_file
    (certificate_file_value)))

==================
can use equals sign with whitespace and quotes
==================

CertificateFile = "~/.ssh/cert"

---

(client_config
  (certificate_file
    (certificate_file_value)))

==================
can be specified after host
==================

Host example.com
  CertificateFile ~/.ssh/cert

---

(client_config
  (host
    (host_value))
  (certificate_file
    (certificate_file_value)))
